# video_thumbnail_generator

./: .gitignore  Doxyfile  LICENSE  README.md
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_c_offscreen_video_surface-members.html  class_c_offscreen_video_surface.html  class_c_offscreen_video_surface.js  class_c_sample_application-members.html  class_c_sample_application.html  class_c_sample_application.js  class_c_video_thumbnail_generator-members.html  class_c_video_thumbnail_generator.html  class_c_video_thumbnail_generator.js  class_test_video_thumnail_generator-members.html  class_test_video_thumnail_generator.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js  offscreen__video__surface_8cpp.html  offscreen__video__surface_8h.html  offscreen__video__surface_8h.js  offscreen__video__surface_8h_source.html  sample_8cpp.html  sample_8cpp.js  test__video__thumbnail__generator_8cpp.html  test__video__thumbnail__generator_8cpp.js  video__thumbnail__generator_8cpp.html  video__thumbnail__generator_8h.html  (+2 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+29 more)
src/: CMakeLists.txt  offscreen_video_surface.cpp  offscreen_video_surface.h  sample.cpp  test_video_thumbnail_generator.cpp  video_thumbnail_generator.cpp  video_thumbnail_generator.h
